--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "nyc-menu-drawer",
   "version": "0.1.0",
+  "license": "GPL-3.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "clipboard": "^2.0.4",
+    "dotenv": "^8.2.0",
+    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "google-maps-react": "^2.0.6",
-    "dotenv": "^8.2.0"
+    "react-google-autocomplete": "^1.2.4",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
